# daw_light_version

./: .gitignore  README.md  main.py  requirements.txt
assets/stylesheets/: dark_theme.qss
benchmarks/: Ambient_benchmark.json  Cinematic_benchmark.json  Edm_benchmark.json  Hiphop_benchmark.json  House_benchmark.json  Lofi_benchmark.json  Phonk_benchmark.json  Pop_benchmark.json  Techno_benchmark.json  Trap_benchmark.json
core/: __init__.py  ai_generative_reverb.py  ai_mix_assistant.py  ai_smart_eq.py  ai_smart_master.py  ai_stem_splitter.py  audio_engine.py  audio_file_player.py  audio_fx_chain.py  audio_fx_panel.py  audio_loop_scheduler_python.py  audio_mixer_strip.py  auto_mastering.py  auto_mastering_dialog.py  automation_lane.py  automation_processor_python.py  benchmark_store.py  channel_rack.py  controller.py  dspreset_engine.py  dspreset_panel.py  dspreset_parser.py  dspreset_realtime_player.py  effects.py  export_dialog.py  export_worker.py  full_project_renderer_python.py  fx_plugin_base.py  fx_plugin_registry.py  fx_plugins_cpp.py  fx_plugins_filter.py  fx_plugins_harmonic.py  fx_plugins_loudness.py  fx_plugins_pedalboard.py  fx_plugins_pitch.py  fx_plugins_sampler.py  fx_plugins_spatial.py  fx_plugins_spectral_panning.py  fx_rack_widget.py  fx_slot_widget.py  (+47 more)
cpp_processors/: CMakeLists.txt  build_win.ps1  setup.cfg  setup.py
cpp_processors/include/: AudioLoopScheduler.h  AuditionProcessor.h  AutoFilter.h  AutomationProcessor.h  BiquadFilter.h  Bitcrusher.h  BrickwallLimiter.h  DeEsser.h  DecentSamplerEngine.h  DelayEcho.h  DspHelpers.h  DynamicEQ.h  EnvelopeFollower.h  Exciter.h  Flanger.h  FullProjectRenderer.h  GateExpander.h  GaussianRng.h  GridDefinition.h  GridSnapper.h  LoudnessAutomation.h  MasterBus.h  MasteringFlavorProcessor.h  MidiDropImporter.h  MultibandCompressor.h  OfflineExporter.h  Overdrive.h  Phaser.h  PidController.h  PitchCorrector.h  PitchShifter.h  QuantizeEngine.h  RmsAnalyzer.h  Sampler.h  Saturation.h  SfizzEngine.h  SfzParser.h  SpectralAnalyzer.h  SpectralMaskingManager.h  SpectralPanningProcessor.h  (+14 more)
cpp_processors/src/: AudioLoopScheduler.cpp  AuditionProcessor.cpp  AutoFilter.cpp  Bitcrusher.cpp  BrickwallLimiter.cpp  DeEsser.cpp  DecentSamplerEngine.cpp  DelayEcho.cpp  DynamicEQ.cpp  EnvelopeFollower.cpp  Exciter.cpp  Flanger.cpp  FullProjectRenderer.cpp  GateExpander.cpp  GaussianRng.cpp  GridDefinition.cpp  GridSnapper.cpp  LoudnessAutomation.cpp  MasterBus.cpp  MasteringFlavorProcessor.cpp  MidiDropImporter.cpp  MultibandCompressor.cpp  OfflineExporter.cpp  Overdrive.cpp  Phaser.cpp  PidController.cpp  PitchCorrector.cpp  PitchShifter.cpp  QuantizeEngine.cpp  RmsAnalyzer.cpp  Sampler.cpp  Saturation.cpp  SfizzEngine.cpp  SfzParser.cpp  SpectralAnalyzer.cpp  SpectralMaskingManager.cpp  SpectralPanningProcessor.cpp  StereoImager.cpp  TelemetryAnalyzer.cpp  TimelineEngine.cpp  (+17 more)
soundfonts/: README.txt
